# MazeSolver-LineFollower

./: CMakeLists.txt  FLF.1dwg.dwg  FLF.dwg  README.md  Shaseeh v2.dxf  car.cpp  car.h  detectColor.py  lines.cpp  lines.h  main.cpp  maze.dwg  temp.py  utils.cpp  utils.h
90_degrees/: 90_degrees.ino
Maze_Code/: 180degree.ino  90degree.ino  finalMaze.ino  leftRightTurn.ino  mainLogic.ino  mazeSensors.ino  readIRSensors.ino
Maze_Code/LF/: LF.ino
PID/: PID.ino
SensorPIDD/: SensorPIDD.ino
bar2banzzen/: README.md  pubspec.yaml
bar2banzzen/assets/: car.json
bar2banzzen/lib/: constant.dart  main.dart
bar2banzzen/linux/: CMakeLists.txt  my_application.cc
bar2banzzen/web/: index.html  manifest.json
bar2banzzen/windows/: CMakeLists.txt
driving_straight_MPU6050_v1/: driving_straight_MPU6050_v1.ino
forward/: forward.ino
maze5-2/FInalMaze/: FinalMaze.ino
maze5-2/maze/: maze.ino
maze5-2/mazeOpt/: mazeOpt.ino
maze5-2/mazeOpt2/: mazeOpt2.ino
maze5-2/sara_maze/: sara_maze.ino
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/kotlin/com/valyouw/native_opencv/: NativeOpencvPlugin.kt
native_opencv/android/src/test/kotlin/com/valyouw/native_opencv/: NativeOpencvPluginTest.kt
native_opencv/example/: pubspec.yaml
optical_encoder/: optical_encoder.ino
optical_encoder2/: optical_encoder2.ino
optical_encoder3/: optical_encoder3.ino
sensors/: sensors.ino
sensorsPID/: SensorPIDD.ino  sensorsPID.ino
(+24 files in other folders)
